--- a/DFC.App.RelatedCareers/Views/Segment/Document.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Document.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayFor(model => model.CanonicalName)
         </dd>
 
-        <dt class="col-sm-2">
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Content)
         </dt>
         <dd class="col-sm-10">
@@ -38,7 +38,7 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.LastReviewed)
-        </dd>
+        </dd>*@
     </dl>
 </div>
 <div>
