--- a/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
@@ -1,6 +1,4 @@
-﻿@model DocumentViewModel
-
-<div class="job-profile-related">
+﻿<div class="job-profile-related">
     @*Temporary for debugging purposes*@
     <h2>Canonical Name: @Model.CanonicalName</h2>
     <h2>DocumentId: @Model.DocumentId</h2>
