--- a/DFC.App.RelatedCareers/Views/Segment/Document.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Document.cshtml
@@ -25,20 +25,8 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CanonicalName)
         </dd>
-
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Content)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.Raw(Model.Content)
-        </dd>
-
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LastReviewed)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LastReviewed)
-        </dd>*@
+        @Html.Partial("Body", Model)
+        
     </dl>
 </div>
 <div>
