Fix to related careers link to route to /profile/[article-name]

--- a/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
@@ -3,8 +3,7 @@
     <ul class="list list-big">
         @foreach (var relatedCareerDataViewModel in Model.Data.RelatedCareers)
         {
-            <li><a href="../@relatedCareerDataViewModel.CanonicalName">@relatedCareerDataViewModel.Title</a></li>
-
+            <li><a href="/profile/@relatedCareerDataViewModel.CanonicalName">@relatedCareerDataViewModel.Title</a></li>
         }
     </ul>
 </div>
