--- a/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
@@ -1,6 +1,6 @@
 ﻿        
 <div class="job-profile-related">
-    <h2 class="heading-medium">Related careers</h2>
+    <h3 class="govuk-heading-m">Related careers</h3>
     <ul class="list list-big">
         @foreach (var relatedCareerDataViewModel in Model.Data.RelatedCareers)
         {
