Updated models to use ProfileLink instead of CanonicalName on the related careers. Tidied models to remove obsolete properties. Updated unit tests.

--- a/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
@@ -4,7 +4,7 @@
     <ul class="list list-big">
         @foreach (var relatedCareerDataViewModel in Model.Data.RelatedCareers)
         {
-            <li><a href="/@Model.RoutePrefix/@relatedCareerDataViewModel.CanonicalName">@relatedCareerDataViewModel.Title</a></li>
+            <li><a href="/@Model.RoutePrefix@relatedCareerDataViewModel.ProfileLink">@relatedCareerDataViewModel.Title</a></li>
         }
     </ul>
 </div>
