Corrected location of LastReviewed date

--- a/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
@@ -1,5 +1,4 @@
-﻿        
-<div class="job-profile-related">
+﻿<div class="job-profile-related">
     <h3 class="govuk-heading-m">Related careers</h3>
     <ul class="list list-big">
         @foreach (var relatedCareerDataViewModel in Model.Data.RelatedCareers)
