--- a/DFC.App.RelatedCareers/Views/Segment/Index.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@model IndexViewModel
 
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Index</title>
+</head>
 <body>
     @if (Model.Documents?.Count() > 0)
     {
