Update Document view for automation tests + cleanup

--- a/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Body.cshtml
@@ -1,6 +1,6 @@
 ﻿@{ 
     var relatedCareers = Model.Data.RelatedCareers as IEnumerable<RelatedCareerDataViewModel>;
-    relatedCareers = relatedCareers.Take(5);
+    relatedCareers = relatedCareers?.Take(5);
 }
 
 <div class="job-profile-related">
