--- a/DFC.App.RelatedCareers/Views/Segment/Document.cshtml
+++ b/DFC.App.RelatedCareers/Views/Segment/Document.cshtml
@@ -26,8 +26,20 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.CanonicalName)
             </dd>
-            @Html.Partial("Body", Model)
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Data.LastReviewed)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Data.LastReviewed)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.SequenceNumber)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.SequenceNumber)
+            </dd>
         </dl>
+        <partial name="Body" model=@Model />
     </div>
     <div>
         <a asp-action="Index">Back to List</a>
